base/node_svc.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: node-app
  name: node-svc
spec:
  type: ClusterIP
  ports:
  - port: 3000
    protocol: TCP
      #targetPort: 30300
  selector:
    app: node-app
status:
  loadBalancer: {}
