base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: node-svc-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: node-app.local  
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: node-svc
            port:
              number: 3000
